Various minor changes
More final stuff
Moved helper to VK library
Various doc fixes
Reordered some classes with overly large static methods